--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Tasks#index</h1>
-<p>Find me in app/views/tasks/index.html.erb</p>
+<div class="main-container">
+
+  <%= link_to "新規タスク作成", new_task_path %>
+
+  <h1>タスク一覧</h1>
+  <div>
+    <% @tasks.each do |task| %>
+      <%= link_to task_path(task.id) do %>
+      <div class="task">
+        ジャンル：<%= task.genre.name %>
+        本文：<%= task.body %>
+        期限：<%= task.due_date %>
+        進捗：<%= task.progress %>
+      </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
