[Add]タスク詳細画面作成、モーダル表示に設定

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Rooms#show</h1>
-<p>Find me in app/views/rooms/show.html.erb</p>
+<div>
+  <div>ルーム名：<%= @room.name %></div>
+
+  <p>パスワードを入力してください。</p>
+
+</div>
