--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,106 @@
-// Place all the styles related to the Tasks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.container-white {
+  height: 80vh;
+  width: 80vw;
+  background-color: #FFF;
+  display: flex;
+}
+
+.task-card {
+  width: 50vw;
+  height: 100px;
+  border: black 1px solid;
+  margin: 5px;
+  background-color: #eee;
+
+  &__date {
+    float: right;
+  }
+  &__body {
+    display: inline-block;
+    width: 50%;
+    height: 3rem;
+    border: black 1px solid;
+    background-color: #fff;
+    margin: 5px;
+  }
+  &__progress {
+    display: inline-block;
+    border: black 1px solid;
+    background-color: #fff;
+    margin: 10px 20px;
+  }
+  &__link {
+    display: inline-block;
+    border: black 1px solid;
+    background-color: #fff;
+    margin: 10px 20px;
+  }
+}
+
+// show
+
+.task-section {
+  &__left {
+  }
+  &__right {
+
+  }
+}
+
+.task-unit {
+  &__heading {
+    font-size: 3rem;
+  }
+  &__img {
+    background-color: green;
+    text-align: center;
+  }
+  &__body {
+    height: 5rem;
+    width: auto;
+    background-color: pink;
+  }
+  &__chat {
+    height: 20rem;
+    width: auto;
+    background-color: blue;
+  }
+
+}
+
+/* hiddenクラスがないとマスクとモーダルが表示される（JavaScriptでhiddenクラスを消したとき）*/
+#mask {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+}
+
+#modal {
+  position: fixed;   /* スクロールで移動しないようmodalの位置を固定します */
+  top: 10vh;
+  /* 以下3行：モーダルを左右中央揃えにする方法 */
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  transform: translate(0, 0) scale(1);
+  transition: 0.2s;   /* transitionでアニメーションを作成 */
+  z-index: 2;   /* マスクより上に重なるようにする */
+  width: 935px;   /* showビューの幅に合わせて設定 */
+}
+
+/* hiddenクラスで最初は表示されないようにする */
+#mask.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+#modal.hidden {
+  opacity: 0;
+  visibility: hidden;
+  transform: translate(0, 0) scale(0.8);   /* 大きさ0.8倍から等倍にモーダルが拡大される */
+}
+
