--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,27 +1,35 @@
 <div class="room-section">
   <div class="room-form">
-    <h1>新規ルーム作成</h1>
-
-    <%= form_with model: @room, local: true do |f| %>
-
-    <%= f.label :name, 'ルーム名' %>
-    <%= f.text_field :name %><br>
-    <%= f.label :room_password, 'パスワード' %>
-    <%= f.text_field :room_password %><br>
-
-    <%= f.submit '新規ルーム作成' %>
+    <h1>入室可能なルーム</h1>
+    <% @user_rooms.each do |room| %>
+    <table>
+      <tr>
+        <th>ルーム名</th>
+        <th>ID</th>
+      </tr>
+      <tr>
+        <td><%= room.name %></td>
+        <td><%= room.id %></td>
+      </tr>
+    </table>
     <% end %>
   </div>
+  <div class="room-form">
+    <h1>新規ルーム作成</h1>
+    <%= form_with model: @room, local: true do |f| %>
+      <%= f.label :name, 'ルーム名' %>
+      <%= f.text_field :name %><br>
 
+      <%= f.submit '新規ルーム作成' %>
+    <% end %>
+  </div>
   <div class="room-form">
     <h1>ルーム検索</h1>
     <div>
       <%= form_with url: room_search_path, method: :get, local: true do |f| %>
-        <%= f.label :name, 'ルーム名' %>
-        <%= f.text_field :name %><br>
-        <%= f.label :room_password, 'パスワード' %>
-        <%= f.text_field :room_password %><br>
-      <%= f.submit "検索" %>
+        <%= f.label :room_search, 'ルームID' %>
+        <%= f.text_field :room_search %><br>
+      <%= f.submit "検索"%>
       <% end %>
     </div>
   </div>
