--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,12 +1,2 @@
 <h1>タスク詳細</h1>
-  <div>
-      <div class="task">
-        ジャンル：<%= @task.genre.name %>
-        本文：<%= @task.body %>
-        期限：<%= @task.due_date %>
-        進捗：<%= @task.progress %>
-      </div>
-
-      <%= link_to "編集", edit_task_path(@task) %>
-      <%= link_to "一覧に戻る", tasks_path %>
-  </div>
+<%= render 'tasks/show', task: @task %>
