--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,17 +10,17 @@
   </div>
   <div class="profile-group__col">
     <p>苦手な家事ジャンル：<%= @user.weaknesses_genre.name %></p>
-    <% if @user.my_room.nil? %>
+    <% if @user.current_room.nil? %>
       <p>マイルーム：未登録</p>
     <% else %>
-      <p>マイルーム：<%= @user.my_room.name %></p>
+      <p>マイルーム：<%= @user.current_room.name %></p>
     <% end %>
   </div>
 </div>
 
 <div class="link-group">
   <div class="link-group__item">
-    <%= link_to "タスク管理", new_room_path %>
+    <%= link_to "タスク管理", tasks_path %>
   </div>
   <div class="link-group__item">
     <h4>ルーム検索</h4>
