--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,18 +1,78 @@
-.container-white {
-  height: 80vh;
-  width: 80vw;
-  background-color: #FFF;
-  display: flex;
+// 全面固定背景画像用CSS
+%default-container {
+  width: 100vw;
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  padding: 10px 20px;
+}
+%default-title {
+  width: 20rem;
+  color: #fff;
+  text-align: center;
+  border: #e6b422 3px double;
+  background-color:#19448e ;
+  padding: 5px;
+  display: inline-block;
+}
+%default-progress {
+  color: #fff;
+  border: #274a78 3px double;
+  padding: 5px 5px 20px 5px;
+  position: relative;
+  top: -20px;
 }
 
+// index
+.main-container {
+  background-image: linear-gradient(rgba(0, 0, 0, 1.0), rgba(0, 0, 0, 0.2)), url(varun-yadav-9wj8gkPCIYE-unsplash.jpg);
+  @extend %default-container;
+  &__title {
+    @extend %default-title;
+  }
+  &__link {
+    color: #fff;
+    margin-left: 2rem;
+  }
+}
+.task-wrapper {
+  padding-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
 .task-card {
-  width: 50vw;
-  height: 100px;
-  border: black 1px solid;
-  margin: 5px;
-  background-color: #eee;
+  width: 30rem;
+  height: 150px;
+  border: #fae299 5px outset;
+  margin-bottom: 30px;
+  background-color: #192f60;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
 
+  &__progress {
+    &--0 {
+      @extend %default-progress;
+      background-color: #c53d43;
+    }
+    &--1 {
+      @extend %default-progress;
+      background-color: #00a3af;
+    }
+    &--2 {
+      @extend %default-progress;
+      background-color: #a99e93;
+    }
+  }
+  &__tag {
+    color: #fff;
+    border: #b7282e 3px double;
+    background-color: #d66a35;
+    padding: 5px 5px 10px 5px;
+    position: relative;
+    top: -19px;
+  }
   &__date {
+    color: #fae299;
     float: right;
   }
   &__body {
@@ -23,12 +83,6 @@
     background-color: #fff;
     margin: 5px;
   }
-  &__progress {
-    display: inline-block;
-    border: black 1px solid;
-    background-color: #fff;
-    margin: 10px 20px;
-  }
   &__link {
     display: inline-block;
     border: black 1px solid;
@@ -38,12 +92,16 @@
 }
 
 // show
-
+.container-white {
+  height: 80vh;
+  width: 80vw;
+  background-color: #FFF;
+  display: flex;
+}
 .task-section {
   &__left {
   }
   &__right {
-
   }
 }
 
