--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -12,16 +12,18 @@
   color: #fff;
   text-align: center;
   border: #e6b422 3px double;
-  background-color:#19448e ;
+  background-color: #19448e;
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5)inset;
   padding: 5px;
   display: inline-block;
 }
 %default-progress {
   color: #fff;
-  border: #274a78 3px double;
+  border: #223a70 3px double;
   padding: 5px 5px 20px 5px;
-  position: relative;
+  position: absolute;
   top: -20px;
+  z-index: 1;
 }
 
 // index
@@ -44,50 +46,95 @@
 .task-card {
   width: 30rem;
   height: 150px;
-  border: #fae299 5px outset;
-  margin-bottom: 30px;
-  background-color: #192f60;
+  border: #fae299 2px outset;
+  margin: 0 20px 30px 0;
+  // background-color: #192f60;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1)), url(michael-behrens-CZABLi1Lbk4-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
   box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+  position: relative;
 
-  &__progress {
-    &--0 {
-      @extend %default-progress;
-      background-color: #c53d43;
+  &__head {
+
+    &__progress {
+      &--0 {
+        @extend %default-progress;
+        background-color: #c53d43;
+      }
+      &--1 {
+        @extend %default-progress;
+        background-color: #00a3af;
+      }
+      &--2 {
+        @extend %default-progress;
+        background-color: #a99e93;
+      }
     }
-    &--1 {
-      @extend %default-progress;
-      background-color: #00a3af;
+    &__tag {
+      color: #fff;
+      border: #b7282e 3px double;
+      background-color: #d66a35;
+      padding: 5px 5px 10px 5px;
+      position: absolute;
+      top: -19px;
+      left: 4rem;
+      z-index: 1;
     }
-    &--2 {
-      @extend %default-progress;
-      background-color: #a99e93;
+    &__date {
+      color: #fae299;
+      float: right;
+      z-index: 1;
     }
   }
-  &__tag {
-    color: #fff;
-    border: #b7282e 3px double;
-    background-color: #d66a35;
-    padding: 5px 5px 10px 5px;
+
+  &__inner {
+    width: 30rem;
+    height: 130px;
     position: relative;
-    top: -19px;
-  }
-  &__date {
-    color: #fae299;
-    float: right;
-  }
-  &__body {
-    display: inline-block;
+    top: -20px;
+    display: flex;
+
+    &__image {
+      width: 10rem;
+      height: 9rem;
+      object-fit: cover;
+    }
+
+    &__body {
     width: 50%;
-    height: 3rem;
-    border: black 1px solid;
-    background-color: #fff;
+    height: 7rem;
+    color: #fff;
+    border: #fff 1px solid;
     margin: 5px;
-  }
-  &__link {
-    display: inline-block;
-    border: black 1px solid;
-    background-color: #fff;
-    margin: 10px 20px;
+    position: relative;
+    top: 1rem;
+    // 中央揃えにしたい
+    // display: table-cell;
+    // vertical-align: center;
+    }
+
+    &__link {
+      height: 2rem;
+      text-decoration: none;
+      display: inline-block;
+      position: relative;
+      top: 3rem;
+      border-radius: 5%;
+      text-align: center;
+      padding: 10px 10px;
+      background: #990000;
+      color: #ffffff;
+      line-height: 1em;
+      transition: .3s;
+      box-shadow: 5px 5px 3px #666666;
+      border: 2px solid #990000;
+    }
+    &__link:hover {
+      box-shadow: none;
+      color: #990000;
+      background: #ffffff;
+    }
   }
 }
 
