--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -14,6 +14,10 @@
       <%= f.label :body, "タスクの内容" %>
       <%= f.text_area :body %>
     </div>
+    <!--<div>-->
+    <!--  <%= f.check_box :template_task, {}, true, false %>-->
+    <!--  <%= f.label :template_task, "テンプレートとして保存する" %>-->
+    <!--</div>-->
     <div class="task-form__fieldt">
       <%= f.submit button_text %>
     </div>
