--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,4 @@
-<h1>タスク詳細</h1>
-<%= render 'tasks/show', task: @task %>
+<div class="main-container">
+  <h1 class="main-container__title">タスク詳細</h1>
+  <%= render 'tasks/show', task: @task %>
+</div>
