--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,211 +1,218 @@
-// 全面固定背景画像用CSS
-%default-container {
-  width: 100vw;
-  min-height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  padding: 10px 20px;
-}
-%default-title {
-  width: 20rem;
-  color: #fff;
-  text-align: center;
-  border: #e6b422 3px double;
-  background-color: #19448e;
-  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5)inset;
-  padding: 5px;
-  display: inline-block;
-}
-%default-progress {
-  color: #fff;
-  border: #223a70 3px double;
-  padding: 5px 5px 20px 5px;
-  position: absolute;
-  top: -20px;
-  z-index: 1;
-}
+// // テーマカラー
+// %theme_color {
+//   color: #88cb7f;
+//   background-color: #fff;
+//   border: #88cb7f;
+// }
+// %second_color {
+//   color: #b3ada0;
+//   background-color: #fff;
+//   border: #b3ada0;
+// }
+// // 大枠のCSS
+// %default-container {
+//   // width: 100%;
+//   min-height: 100vh;
+//   padding: 100px 40px 10px; //ヘッダー分だけ下げる
+//   background-color: #fbfaf5;
+// }
+// // モーダル用ウィンドウサイズ
+// %default-modal-container {
+//   width: 50vw;
+//   height: 50vh;
+// }
+// %default-title {
+//   @extend %theme_color;
+//   width: 20rem;
+//   font-family: 'CP_Revenge';
+//   text-align: center;
+//   border: #88cb7f 3px double;
+//   padding: 5px;
+//   display: inline-block;
+// }
+// %default-progress {
+//   color: #fff;
+//   border: 3px double;
+//   padding: 5px 5px 20px 5px;
+//   position: absolute;
+//   top: -20px;
+//   z-index: 1;
+// }
 
-// index
-.main-container {
-  background-image: linear-gradient(rgba(0, 0, 0, 1.0), rgba(0, 0, 0, 0.2)), url(varun-yadav-9wj8gkPCIYE-unsplash.jpg);
-  @extend %default-container;
-  &__title {
-    @extend %default-title;
-  }
-  &__link {
-    color: #fff;
-    margin-left: 2rem;
-  }
-}
-.task-wrapper {
-  padding-top: 30px;
-  display: flex;
-  flex-wrap: wrap;
-}
-.task-card {
-  width: 30rem;
-  height: 150px;
-  border: #fae299 2px outset;
-  margin: 0 20px 30px 0;
-  // background-color: #192f60;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1)), url(michael-behrens-CZABLi1Lbk4-unsplash.jpg);
-  background-size: cover;
-  background-position: center;
-  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
-  position: relative;
 
-  &__head {
+// // index
+// .main-container {
+//   @extend %default-container;
+//   &__title {
+//     @extend %default-title;
+//   }
+//   &__link {
+//     color: #fff;
+//     margin-left: 2rem;
+//   }
+// }
+// .task-wrapper {
+//   padding-top: 30px;
+//   display: flex;
+//   flex-wrap: wrap;
+// }
+// .task-card {
+//   @extend %second_color;
+//   width: 30rem;
+//   height: 150px;
+//   border: 2px solid;
+//   margin: 0 20px 30px 0;
+//   box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+//   position: relative;
 
-    &__progress {
-      &--0 {
-        @extend %default-progress;
-        background-color: #c53d43;
-      }
-      &--1 {
-        @extend %default-progress;
-        background-color: #00a3af;
-      }
-      &--2 {
-        @extend %default-progress;
-        background-color: #a99e93;
-      }
-    }
-    &__tag {
-      color: #fff;
-      border: #b7282e 3px double;
-      background-color: #d66a35;
-      padding: 5px 5px 10px 5px;
-      position: absolute;
-      top: -19px;
-      left: 4rem;
-      z-index: 1;
-    }
-    &__date {
-      color: #fae299;
-      float: right;
-      z-index: 1;
-    }
-  }
+//   &__head {
 
-  &__inner {
-    width: 30rem;
-    height: 130px;
-    position: relative;
-    top: -20px;
-    display: flex;
+//     &__progress {
+//       &--0 {
+//         @extend %default-progress;
+//         background-color: #c53d43;
+//       }
+//       &--1 {
+//         @extend %default-progress;
+//         background-color: #00a3af;
+//       }
+//       &--2 {
+//         @extend %default-progress;
+//         background-color: #a99e93;
+//       }
+//     }
+//     &__tag {
+//       color: #fff;
+//       border: #b7282e 3px double;
+//       background-color: #d66a35;
+//       padding: 5px 5px 10px 5px;
+//       position: absolute;
+//       top: -19px;
+//       left: 4rem;
+//       z-index: 1;
+//     }
+//     &__date {
+//       color: #fae299;
+//       float: right;
+//       z-index: 1;
+//     }
+//   }
 
-    &__image {
-      width: 10rem;
-      height: 9rem;
-      object-fit: cover;
-    }
+//   &__inner {
+//     width: 30rem;
+//     height: 130px;
+//     position: relative;
+//     top: -20px;
+//     display: flex;
 
-    &__body {
-    width: 50%;
-    height: 7rem;
-    color: #fff;
-    border: #fff 1px solid;
-    margin: 5px;
-    position: relative;
-    top: 1rem;
-    // 中央揃えにしたい
-    // display: table-cell;
-    // vertical-align: center;
-    }
+//     &__image {
+//       width: 10rem;
+//       height: 9rem;
+//       object-fit: cover;
+//     }
 
-    &__link {
-      height: 2rem;
-      text-decoration: none;
-      display: inline-block;
-      position: relative;
-      top: 3rem;
-      border-radius: 5%;
-      text-align: center;
-      padding: 10px 10px;
-      background: #990000;
-      color: #ffffff;
-      line-height: 1em;
-      transition: .3s;
-      box-shadow: 5px 5px 3px #666666;
-      border: 2px solid #990000;
-    }
-    &__link:hover {
-      box-shadow: none;
-      color: #990000;
-      background: #ffffff;
-    }
-  }
-}
+//     &__body {
+//     width: 50%;
+//     height: 7rem;
+//     border: #fff 1px solid;
+//     margin: 5px;
+//     position: relative;
+//     top: 1rem;
+//     // 中央揃えにしたい
+//     // display: table-cell;
+//     // vertical-align: center;
+//     }
 
-// show
-.container-white {
-  height: 80vh;
-  width: 80vw;
-  background-color: #FFF;
-  display: flex;
-}
-.task-section {
-  &__left {
-  }
-  &__right {
-  }
-}
+//     &__link {
+//       height: 2rem;
+//       text-decoration: none;
+//       display: inline-block;
+//       position: relative;
+//       top: 3rem;
+//       border-radius: 5%;
+//       text-align: center;
+//       padding: 10px 10px;
+//       background: #990000;
+//       color: #ffffff;
+//       line-height: 1em;
+//       transition: .3s;
+//       box-shadow: 5px 5px 3px #666666;
+//       border: 2px solid #990000;
+//     }
+//     &__link:hover {
+//       box-shadow: none;
+//       color: #990000;
+//       background: #ffffff;
+//     }
+//   }
+// }
 
-.task-unit {
-  &__heading {
-    font-size: 3rem;
-  }
-  &__img {
-    background-color: green;
-    text-align: center;
-  }
-  &__body {
-    height: 5rem;
-    width: auto;
-    background-color: pink;
-  }
-  &__chat {
-    height: 20rem;
-    width: auto;
-    background-color: blue;
-  }
+// // show
+// .container-white {
+//   @extend %default-container;
+//   display: flex;
+// }
+// .task-section {
+//   &__left {
+//   }
+//   &__right {
+//   }
+// }
 
-}
+// .task-unit {
+//   &__heading {
+//     font-size: 3rem;
+//   }
+//   &__img {
+//     background-color: green;
+//     text-align: center;
+//   }
+//   &__body {
+//     height: 5rem;
+//     width: auto;
+//     background-color: pink;
+//   }
+//   &__chat {
+//     height: 20rem;
+//     width: auto;
+//     background-color: blue;
+//   }
 
-/* hiddenクラスがないとマスクとモーダルが表示される（JavaScriptでhiddenクラスを消したとき）*/
-#mask {
-  background-color: rgba(0, 0, 0, 0.5);
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: 1;
-}
+// }
 
-#modal {
-  position: fixed;   /* スクロールで移動しないようmodalの位置を固定します */
-  top: 10vh;
-  /* 以下3行：モーダルを左右中央揃えにする方法 */
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  transform: translate(0, 0) scale(1);
-  transition: 0.2s;   /* transitionでアニメーションを作成 */
-  z-index: 2;   /* マスクより上に重なるようにする */
-  width: 935px;   /* showビューの幅に合わせて設定 */
-}
+// // hiddenクラス消去でマスクとモーダルが表示
+// #mask {
+//   background-color: rgba(0, 0, 0, 0.5);
+//   position: fixed;
+//   top: 0;
+//   bottom: 0;
+//   right: 0;
+//   left: 0;
+//   z-index: 1;
+// }
 
-/* hiddenクラスで最初は表示されないようにする */
-#mask.hidden {
-  opacity: 0;
-  visibility: hidden;
-}
+// #modal {
+//   position: fixed; // モーダルを固定
+//   top: 10vh;
+//   // 以下3行：モーダルを左右中央揃え
+//   left: 0;
+//   right: 0;
+//   margin: 0 auto;
+//   transform: translate(0, 0) scale(1);
+//   transition: 0.2s;
+//   z-index: 2;  // マスクより上に配置
+//   // width: 800px;   /* showビューの幅に合わせて設定 */
+// }
 
-#modal.hidden {
-  opacity: 0;
-  visibility: hidden;
-  transform: translate(0, 0) scale(0.8);   /* 大きさ0.8倍から等倍にモーダルが拡大される */
-}
+// /* hiddenクラスで最初は表示されないようにする */
+// #mask.hidden {
+//   opacity: 0;
+//   visibility: hidden;
+// }
+
+// #modal.hidden {
+//   opacity: 0;
+//   visibility: hidden;
+//   transform: translate(0, 0) scale(0.8);   /* 大きさ0.8倍から等倍にモーダルが拡大される */
+// }
 
