--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,12 +23,12 @@
     <%= link_to "タスク管理", tasks_path %>
   </div>
   <div class="link-group__item">
-    <h4>ルーム検索</h4>
+    <h4>ユーザー検索</h4>
   </div>
   <div class="link-group__item">
-    <%= link_to "ルーム作成", new_room_path %>
+    <%= link_to "ルーム作成・検索", new_room_path %>
   </div>
   <div class="link-group__item">
-    <h4>ユーザ検索</h4>
+    <%= link_to "ひみつの部屋", monsters_path %>
   </div>
 </div>
