--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,7 @@
       <p>マイルーム：<%= @user.current_room.name %></p>
     <% end %>
   </div>
+  <%= link_to "編集", edit_user_path %>
 </div>
 
 <div class="link-group">
