[fix]デバイス修正、論理削除実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,3 +33,7 @@
     <%= link_to "ひみつの部屋", monsters_path %>
   </div>
 </div>
+
+<div>
+  <%= link_to "退会を希望する場合はこちら", confirm_unsubscribe_path(@user) %>
+</div>
