--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,15 +1,5 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
+ *= require reset
  *= require_tree .
  *= require_self
  */
@@ -20,31 +10,13 @@
   src: font-url('/assets/fonts/CP_Revenge.otf');
  }
 
-// ヘッダーのCSS
 body {
   margin: 0;
   width: 100%;
+  box-sizing: border-box;
   font-family: 'Gurmukhi MN','Roman','ヒラギノ明朝 ProN','Hiragino Mincho ProN','Yu Mincho Light','YuMincho','Yu Mincho','游明朝体',sans-serif;
 }
-.header {
-  position: fixed;
-  top: 0px;
-  z-index: 9;
-  width: 100%;
-  height: 3rem;
-  display: flex;
 
-  &__logo {
-    padding: 1rem;
-  }
-}
-.nav {
-  list-style: none;
-  display: flex;
-  &__item {
-    padding: 0 1rem;
-  }
-}
 .flash-area {
   color: white;
   text-align: center;
