--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,14 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="top-container">
+  <div class="visual-wrapper">
+    <p class="visual-wrapper__subtitle">感謝の気持ちを伝える</p>
+    <p class="visual-wrapper__title">「家事大変なのにいつもありがとう」</p>
+    <p class="visual-wrapper__subtitle">楽しく家事をする</p>
+    <p class="visual-wrapper__title">「苦手な家事もこれなら頑張れそう」</p>
+    <p class="visual-wrapper__bottom">を叶えるタスク管理サイト</p>
+
+    <%= link_to 'ログイン', new_user_session_path, class: "visual-wrapper__btn" %>
+  </div>
+  <div class="text-wrapper">
+    ここに概要
+  </div>
+</div>
