[Design]top,login,signupのレイアウト変更

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -2,8 +2,9 @@
   $thema-color1: #82cddd; // 青
   $thema-color2: #e6bfb2; // ピンク
   $thema-color3: #504946; // 茶色
-  $base-color1: #f7f6f5; // 白
+  $base-color1: #f7f6f5; // きなり白
   $base-color2: #d3d3d8; // グレー
+  $base-color3: #fff;  // 真っ白
 
 // ボタン
 %default-btn {
