--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,5 +1,23 @@
+@import "variables";
+
+.user-container {
+  @extend %default-container;
+  width: 100%;
+
+  &__foot {
+    color: $base-color2;
+    text-decoration: none;
+    text-align: right;
+  }
+
+  &__foot:hover {
+    color: $thema-color3;
+  }
+}
+
 .profile-group {
-  width: 80vw;
+  width: 60vw;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
 
@@ -9,26 +27,71 @@
     border-radius: 50%;
     object-fit: cover;
   }
+
+  &__col {
+    margin: 1rem auto;
+    color: $thema-color3;
+    position: relative;
+
+    &__name {
+      font-size: 30px;
+    }
+
+    &__item {
+      font-size: 15px;
+      background:linear-gradient(transparent 80%, $thema-color1 0%);
+      margin: 0.5rem 0;
+
+      &--big {
+        font-size: 30px;
+      }
+    }
+
+    &__btn {
+      @extend %default-btn;
+      color: $base-color1;
+      background-color: $thema-color3;
+      margin: 2rem auto;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
+  }
 }
 
 .link-group {
+  margin: 4rem auto;
   display: flex;
   flex-wrap: wrap;
 
   &__item {
     height: 100px;
-    width: 45%;
+    width: 25%;
     line-height: 1rem;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    border: 1px solid brack;
-    background-color: #eee;
+    font-size: 25px;
+    font-family: 'Hannotate SC','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','Meiryo UI',sans-serif;
+    margin: 0 auto;
 
     a {
+      text-decoration: none;
+      color: $thema-color3;
+      border: 1px solid $thema-color3;
+      border-radius: 5%;
+      background-color: $base-color3;
       display: flex;
       height: 100px;
       justify-content: center;
       align-items: center;
+      transition: transform 300ms ease;
+    }
+
+    a:hover {
+      color: $base-color3;
+      background-color: $thema-color1;
+      border: 1px solid $base-color3;
+      transform: scale(1.1, 1.1);
     }
   }
+
+
 }
