--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,36 +1,38 @@
-<h1>マイページ</h1>
-<div class="profile-group">
-  <div class="profile-group__image">
-    <%= attachment_image_tag @user, :profile_image, fallback: 'noimage-760x460.png' %>
+<div class="user-container">
+  <div class="profile-group">
+    <div class="profile-group__image">
+      <%= attachment_image_tag @user, :profile_image, fallback: 'noimage-760x460.png' %>
+    </div>
+    <div class="profile-group__col">
+      <p class="profile-group__col__name"><%= @user.name %></p>
+      <p class="profile-group__col__item">家事レベル：<span class="profile-group__col__item--big"><%= @user.housework_level %></span></p>
+      <p class="profile-group__col__item">次のレベルまで：<span class="profile-group__col__item--big"><%= to_next_level(@user) %></span></p>
+    </div>
+    <div class="profile-group__col">
+      <p class="profile-group__col__item">苦手な家事ジャンル：<%= @user.weaknesses_genre.name %></p>
+      <% if @user.current_room.nil? %>
+        <p class="profile-group__col__item">マイルーム：未登録</p>
+      <% else %>
+        <p class="profile-group__col__item">マイルーム：<%= @user.current_room.name %></p>
+      <% end %>
+      <%= link_to "編集", edit_user_path, class: "profile-group__col__btn" %>
+    </div>
   </div>
-  <div class="profile-group__col">
-    <p><%= @user.name %></p>
-    <p>家事レベル：<%= @user.housework_level %></p>
-    <p>次のレベルまで：<%= to_next_level(@user) %></p>
+
+  <div class="link-group">
+    <div class="link-group__item">
+      <%= link_to "タスク管理", tasks_path %>
+    </div>
+    <div class="link-group__item">
+      <%= link_to "ルーム作成・検索", new_room_path %>
+    </div>
+    <div class="link-group__item">
+      <%= link_to "ひみつの部屋", monsters_path %>
+    </div>
   </div>
-  <div class="profile-group__col">
-    <p>苦手な家事ジャンル：<%= @user.weaknesses_genre.name %></p>
-    <% if @user.current_room.nil? %>
-      <p>マイルーム：未登録</p>
-    <% else %>
-      <p>マイルーム：<%= @user.current_room.name %></p>
-    <% end %>
+
+  <div class="user-container__foot">
+    <%= link_to "退会を希望する場合はこちら", confirm_unsubscribe_path(@user), class: "user-container__foot" %><i class="fas fa-chevron-right"></i>
   </div>
-  <%= link_to "編集", edit_user_path %>
 </div>
 
-<div class="link-group">
-  <div class="link-group__item">
-    <%= link_to "タスク管理", tasks_path %>
-  </div>
-  <div class="link-group__item">
-    <%= link_to "ルーム作成・検索", new_room_path %>
-  </div>
-  <div class="link-group__item">
-    <%= link_to "ひみつの部屋", monsters_path %>
-  </div>
-</div>
-
-<div>
-  <%= link_to "退会を希望する場合はこちら", confirm_unsubscribe_path(@user) %>
-</div>
