--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "share/variables";
 
 .user-container {
   @extend %default-container;
@@ -92,6 +92,4 @@
       transform: scale(1.1, 1.1);
     }
   }
-
-
 }
