--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,9 +1,40 @@
-.room-section {
-  display: flex;
+@import 'share/variables';
+
+.room-container {
+  @extend %default-container;
+  min-height: 80vh;
 }
 
-.room-form {
-  margin: 0 30px;
+.room-section {
+  width: 80vw;
   display: flex;
-  flex-direction: column;
+
+  &__block {
+    width: 30vw;
+    margin: 0 auto;
+
+    &__title {
+      @extend %default-title;
+    }
+  }
+}
+
+.room-form-wrapper {
+  width: 50vw;
+
+  &__form-group {
+    @extend %default-form-group;
+
+    &__label {
+    @extend %default-form-group__label;
+    }
+
+    &__field {
+      @extend %default-form-group__field;
+    }
+
+    &__btn {
+      @extend %default-form-group__btn;
+    }
+  }
 }
