--- a/app/assets/stylesheets/share/_variables.scss
+++ b/app/assets/stylesheets/share/_variables.scss
@@ -29,13 +29,60 @@
 }
 
 // タイトル用
-%default-heading {
+%default-title {
+  margin: 2rem 0;
   color: $thema-color3;
-  border: 1px solid $thema-color3;
-  border-radius: 15%;
-  background-color: $base-color1;
-  padding: 1rem 2rem;
-  display: inline-block;
+  font-family: $font-family1;
+  font-size: 30px;
+}
+
+// フォーム
+%default-form-group {
+  width: 50vw;
+  margin: 0.5rem auto;
+  line-height: 1.5rem;
+
+  &__label {
+    width: 10rem;
+    font-size: 0.5rem;
+    font-weight: bold;
+    text-align: left;
+  }
+
+  &__field {
+    width: 20rem;
+  }
+
+  &__field input {
+    width: 20rem;
+    height: 1.5rem;
+    border: 2px solid $base-color2;
+    border-radius: 5px;
+  }
+
+  &__field input:focus {
+    outline: none;
+    border: 2px solid $thema-color2;
+  }
+
+  &__lead {
+    margin: 2rem 0;
+    font-size: 15px;
+  }
+
+  &__btn {
+    @extend %default-btn;
+    color: $base-color3;
+    background-color: $thema-color2;
+    border-color: $thema-color2;
+    width: 10rem;
+    margin: 3rem auto;
+
+    &:hover {
+      color: $thema-color2;
+      background-color: $base-color3;
+    }
+  }
 }
 
 // モーダル表示
