--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,22 +1,34 @@
-<div class="room-section">
-  <div class="room-form">
-    <h1>新規ルーム作成</h1>
-    <%= form_with model: @room, local: true do |f| %>
-      <%= f.label :name, 'ルーム名' %>
-      <%= f.text_field :name %><br>
-      <%= f.label :password, 'パスワード' %>
-      <%= f.text_field :password %><br>
-      <%= f.submit '新規ルーム作成' %>
-    <% end %>
-  </div>
-  <div class="room-form">
-    <h1>ルーム検索</h1>
-    <div>
-      <%= form_with url: room_search_path, method: :get, local: true do |f| %>
-        <%= f.label :room_search, 'ルームID' %>
-        <%= f.text_field :room_search %><br>
-      <%= f.submit "検索"%>
-      <% end %>
+<div class="room-container">
+  <div class="room-section">
+    <div class="room-section__block">
+      <h1 class="room-section__block__title">新規ルーム作成</h1>
+      <div class="room-form-wrapper">
+        <%= form_with model: @room, local: true do |f| %>
+        <div class="room-form-wrapper__form-group">
+          <div class="room-form-wrapper__form-group__label"><%= f.label :name, 'ルーム名' %></div>
+          <div class="room-form-wrapper__form-group__field"><%= f.text_field :name %></div>
+          <div class="room-form-wrapper__form-group__label"><%= f.label :password, 'パスワード' %></div>
+          <div class="room-form-wrapper__form-group__field"><%= f.text_field :password %></div>
+          <div class="room-form-wrapper__form-group">
+            <%= f.submit '新規ルーム作成', class: "room-form-wrapper__form-group__btn" %>
+          </div>
+        </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="room-section__block">
+      <h1 class="room-section__block__title">ルーム検索</h1>
+      <div class="room-form-wrapper">
+        <%= form_with url: room_search_path, method: :get, local: true do |f| %>
+        <div class="room-form-wrapper__form-group">
+          <div class="room-form-wrapper__form-group__label"><%= f.label :room_search, 'ルームID' %></div>
+          <div class="room-form-wrapper__form-group__field"><%= f.text_field :room_search %></div>
+          <div class="room-form-wrapper__form-group">
+            <%= f.submit "検索", class: "room-form-wrapper__form-group__btn" %>
+          </div>
+        </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
