--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,26 +1,17 @@
 <div class="main-container">
-  <div class="header-title">受付一覧:
-    <%= current_room.name %>
-    <%= link_to "Logout", logout_path, method: :delete %>
+  <div class="main-top">
+    <h1 class="main-top__title">タスク一覧</h1>
+    <div class="main-top__link"><%= link_to "新規タスク作成", new_task_path , class: "fas fa-plus-circle" %></div>
+    <div class="main-top__room-unit">
+      現在のルーム: <%= current_room.name %>
+      <%= link_to "Logout", logout_path, method: :delete, class: "main-top__room-unit__btn" %>
+    </div>
   </div>
-  <h1 class="main-container__title">タスク一覧</h1>
-  <%= link_to "新規タスク作成", new_task_path , class: "main-container__link fas fa-plus-circle" %>
+
   <div class="task-wrapper">
-      <% @tasks.includes([:genre, :monster]).each do |task| %>
-      <%= link_to task_path(task.id), remote: true do %>
-        <div class="task-card">
-          <div class="task-card__head">
-            <span class="task-card__head__progress--<%= task.progress_before_type_cast %>"><%= task.progress %></span>
-            <span class="task-card__head__tag"><%= task.genre.name %></span>
-            <span class="task-card__head__date">予定：<%= task.due_date.strftime("%m月%d日 %H:%M") %></span><br>
-          </div>
-          <div class="task-card__inner">
-            <%= attachment_image_tag task.monster, :image, fallback: 'noimage-760x460.png', class: "task-card__inner__image"%>
-            <div class="task-card__inner__body"><span><%= task.body %></span></div>
-          </div>
-        </div>
-      <% end %>
-      <% end %>
+    <% @tasks.includes([:genre, :monster]).each do |task| %>
+      <%= render 'tasks/task-card', task: task %>
+    <% end %>
   </div>
 </div>
 
