--- a/app/views/tasks/show.js.erb
+++ b/app/views/tasks/show.js.erb
@@ -5,6 +5,17 @@ var mask = document.getElementById('mask');
 <!--モーダルの中身をshowビューに置き換える-->
 modal.innerHTML = '<%= escape_javascript(render partial: 'tasks/show', locals: { task: @task }) %>';
 
+<!--モーダル内でタブを変更可能にする記述-->
+$('#tab-contents .tab[id != "tab1"]').hide();
+
+$(document).on('click','#tab-menu a',function(event){
+  $("#tab-contents .tab").hide();
+  $("#tab-menu .active").removeClass("active");
+  $(this).addClass("active");
+  $($(this).attr("href")).show();
+  event.preventDefault();
+});
+
 <!--hiddenクラスを消してモーダルとマスクを表示-->
 modal.classList.remove('hidden');
 mask.classList.remove('hidden');
