--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>タスク編集</h1>
-<%= render 'tasks/task_form', task: @task %>
+<div class="task-form-container">
+  <h1 class="task-form-container__title">タスク編集</h1>
+  <%= render 'tasks/task_form', task: @task %>
+</div>
