--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,2 +1,4 @@
-<h1>新規タスク作成</h1>
-<%= render 'tasks/task_form', task: @task %>
+<div class="task-form-container">
+  <h1 class="task-form-container__title">新規タスク作成</h1>
+  <%= render 'tasks/task_form', task: @task %>
+</div>
