--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,23 +9,30 @@
   font-family: 'CP_Revenge';
   src: font-url('/assets/fonts/CP_Revenge.otf');
  }
+ @import "share/variables";
 
 body {
   margin: 0;
   width: 100%;
   box-sizing: border-box;
-  font-family: 'Gurmukhi MN','Roman','ヒラギノ明朝 ProN','Hiragino Mincho ProN','Yu Mincho Light','YuMincho','Yu Mincho','游明朝体',sans-serif;
+  font-family: $font-family1;
 }
 
 .flash-area {
-  color: white;
+  width: 100%;
+  color: $base-color3;
+  line-height: 2rem;
   text-align: center;
+  font-family: $font-family2;
+  position: fixed;
+  top: 3rem;
+  z-index: 8;
 
   .notice {
-    background-color: lightBlue;
+    background-color: $thema-color1;
   }
   .alert {
-    background-color: orange;
+    background-color: $point-color1;
   }
 }
 
