--- a/app/assets/stylesheets/share/header.scss
+++ b/app/assets/stylesheets/share/header.scss
@@ -5,7 +5,7 @@
   height: 3rem;
   line-height: 3rem;
   color: $thema-color3;
-  font-family: 'Hannotate SC','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','Meiryo UI',sans-serif;
+  font-family: $font-family2;
   background-color: $base-color3;
   box-shadow: 0 0 2px $base-color2;
   position: fixed;
