--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,3 +1,79 @@
-// Place all the styles related to the Messages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import 'share/variables';
+
+%message-line {
+  font-size: 15px;
+  color: $thema-color3;
+  line-height: 1.3rem;
+  margin-bottom: 1rem;
+}
+
+%message-frame {
+  max-width: 13rem;
+  border: solid 1px;
+  border-radius: 20%;
+  padding: 0.3rem 0.5rem;
+  display: inline-block;
+}
+
+.chat-container {
+  width: auto;
+  height: 350px;
+  background-color: $thema-color1;
+  padding: 1rem 0.5rem;
+  position: relative;
+
+  &__body {
+    @extend %message-line;
+    text-align: left;
+    margin-left: 1.5rem;
+    position: relative;
+
+    &--right {
+      @extend %message-line;
+      text-align: right;
+      margin-left: auto;
+    }
+  }
+
+  &__frame {
+    @extend %message-frame;
+    border-color: #f3a68c;
+    background-color: $thema-color2;
+
+    &--right {
+      @extend %message-frame;
+      border-color: $base-color2;
+      background-color: $base-color1;
+    }
+  }
+
+  &__image {
+    width: 1.5rem;
+    height: 1.5rem;
+    vertical-align: middle;
+    border-radius: 50%;
+    object-fit: cover;
+    position: absolute;
+    left: -1.7rem;
+  }
+}
+
+.chat-form-container {
+  width: 300px;
+  height: 3rem;
+  text-align: center;
+  background-color: $base-color1;
+  padding: 0.5rem;
+  position: fixed;
+  right: 0;
+  bottom: 150px;
+
+  &__field-line {
+    text-align: center;
+  }
+
+  &__field {
+    height: 1.5rem;
+    width: 13rem;
+  }
+}
