--- a/app/assets/stylesheets/tasks/_task-show.scss
+++ b/app/assets/stylesheets/tasks/_task-show.scss
@@ -16,9 +16,6 @@
 
 // task tab
 .task-unit {
-  width: inherit;
-  height: inherit;
-  position: relative;
 
   &__items {
     display: flex;
@@ -35,15 +32,11 @@
   }
 
   &__body {
-    height: 250px;
+    height: 300px;
     width: 400px;
     background-color: $base-color3;
+    margin: 3rem auto;
     padding: 2rem 1rem 1rem;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
   }
 }
 
@@ -176,7 +169,7 @@
 
 #tab-contents .tab {
   width: 100%;
-  height: 384px;
+  height: 444px;
   padding: 30px;
   background: $base-color1;
 }
