[Design]レイアウト修正

--- a/app/assets/stylesheets/share/_variables.scss
+++ b/app/assets/stylesheets/share/_variables.scss
@@ -1,11 +1,14 @@
 // テーマカラー
   $thema-color1: #82cddd; // 青
+  $thema-color1-dark: #25b7c0;
   $thema-color2: #e6bfb2; // ピンク
+  $thema-color2-dark: #f3a68c;
   $thema-color3: #504946; // 茶色
+  $thema-color3-light: #9d8e87;
   $base-color1: #f7f6f5; // きなり白
   $base-color2: #d3d3d8; // グレー
   $base-color3: #fff;  // 真っ白
-  $point-color1: #e95464; // 赤
+  $point-color1: #da536e; // 赤
 
 // フォントセット
   $font-family1: 'Gurmukhi MN','Roman','ヒラギノ明朝 ProN','Hiragino Mincho ProN','Yu Mincho Light','YuMincho','Yu Mincho','游明朝体',sans-serif;
