--- a/app/assets/stylesheets/tasks/_task-card.scss
+++ b/app/assets/stylesheets/tasks/_task-card.scss
@@ -23,7 +23,7 @@
     &__progress {
       &--0 {
         @extend %default-sticky;
-        background-color: #c53d43;
+        background-color: #da536e;
       }
       &--1 {
         @extend %default-sticky;
@@ -45,7 +45,7 @@
     &__date {
       @extend %default-sticky;
       border-color: $base-color1;
-      background-color: $thema-color3;
+      background-color: $thema-color3-light;
       right: 0;
     }
   }
@@ -65,12 +65,15 @@
 
     &__body {
       width: 18rem;
-      height: 110px;
+      height: 100px;
+      font-size: 20px;
       color: $thema-color3;
       border: #fff 1px solid;
-      margin: 5px;
-      display: table-cell;
-      vertical-align: middle;
+      margin: 40px 10px 5px;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 5;
+      overflow: hidden;
     }
   }
 }
