--- a/app/assets/stylesheets/tasks/_task-show.scss
+++ b/app/assets/stylesheets/tasks/_task-show.scss
@@ -28,7 +28,11 @@
   &__btn {
     @extend %default-btn;
     color: $base-color1;
-    background-color: $thema-color3;
+    background-color: $thema-color3-light;
+
+    &:hover {
+      background-color: $thema-color3;
+    }
   }
 
   &__body {
@@ -37,6 +41,8 @@
     background-color: $base-color3;
     margin: 3rem auto;
     padding: 2rem 1rem 1rem;
+    white-space: pre-wrap;
+    overflow: auto;
   }
 }
 
@@ -90,45 +96,68 @@
   height: 150px;
   width: auto;
   text-align: center;
-  padding: 1rem;
+  padding-top: 0.5rem;
+  display: flex;
+  justify-content: center;
+
+  &--left {
+  }
 
   &__complete-btn {
     @extend %default-btn;
     color: $base-color3;
     background-color: $thema-color2;
-    font-size: 15px;
-    height: 3rem;
+    line-height: 7rem;
+    width : 100%;
+
+    &:hover {
+      background-color: $thema-color2-dark;
+    }
 
     &--disabled {
       @extend %default-btn;
       color: $base-color3;
       background-color: $base-color2;
+      width : 100%;
+      height: 100%;
       pointer-events: none;
     }
   }
 
-  &__link-group {
-    display: flex;
+  &__keep-btn {
+    @extend %default-btn;
+    color: $base-color3;
+    background-color: $thema-color1;
+    width : 100%;
 
-    &--delete {
-      @extend %default-btn;
-      color: $base-color1;
-      background-color: $base-color2;
-      height: 1rem;
-      width: 5rem;
-      margin-right: 1rem;
-
-      &:hover {
-        background-color: $point-color1;
-      }
+    &:hover {
+      background-color: $thema-color1-dark;
     }
+  }
 
-    &--back {
-      @extend %default-btn;
-      color: $base-color1;
+  &--right {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__delete-btn {
+    @extend %default-btn;
+    color: $base-color1;
+    background-color: $base-color2;
+
+    &:hover {
+      background-color: $point-color1;
+    }
+  }
+
+  &__back-btn {
+    @extend %default-btn;
+    color: $base-color1;
+    background-color: $thema-color3-light;
+    line-height: 2rem;
+
+    &:hover {
       background-color: $thema-color3;
-      height: 1rem;
-      width: 5rem;
     }
   }
 }
