[Add]タスク機能にテンプレート参照機能追加

--- a/app/assets/stylesheets/share/footer.scss
+++ b/app/assets/stylesheets/share/footer.scss
@@ -9,4 +9,6 @@ footer {
   line-height: 3rem;
   background-color: $base-color3;
   box-shadow: 0 0 2px $base-color2;
+  position: relative;
+  z-index: 2;
 }
