--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -1,16 +1,7 @@
 <div class="form-wrapper">
   <%= form_with model: task, local: true do |f| %>
-    <!--先頭にchecked: trueをつける-->
-    <% Genre.all.each_with_index do |genre, number| %>
-    <div class="form-wrapper__form-group">
-      <% if number == 0 %>
-        <%= f.radio_button :genre_id, genre.id, checked: true %>
-      <% else %>
-        <%= f.radio_button :genre_id, genre.id %>
-      <% end %>
-      <%= f.label :genre_id, genre.name, value: genre.id %>
-    </div>
-    <% end %>
+    <p class="form-wrapper__form-group">家事ジャンルを選んでください。</p>
+    <%= render 'tasks/genre-card', f: f %>
     <div class="form-wrapper__form-group">
       <div class="form-wrapper__form-group__label"><%= f.label :due_date, "予定完了日時" %></div>
       <div class="form-wrapper__form-group__field"><%= f.datetime_field :due_date %></div>
