--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,8 @@
 <div class="task-form-container">
+  <%= render 'tasks/template-tasks', template_tasks: @template_tasks %>
   <h1 class="task-form-container__title">新規タスク作成</h1>
-  <%= render 'tasks/task_form', task: @task %>
+  <div class="new-task-form">
+    <%= render 'tasks/task_form', task: @task %>
+  </div>
 </div>
+<div id= "mask" class="hidden"></div>
